--- a/thank-you.html
+++ b/thank-you.html
@@ -2,14 +2,200 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="assets/images/Icons/tab_icon.png" type="image/x-icon">
+
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+    crossorigin="anonymous"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+  />
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/navbar.css" />
+  <link rel="stylesheet" href="assets/css/footer.css" />
+  <link rel="stylesheet" href="assets/css/bttb.css" />
+  <link rel="stylesheet" href="assets/css/scroll-bar.css" />
+  <link
+    rel="shortcut icon"
+    href="assets/images/about.png"
+    type="image/x-icon"
+  />
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
   <title>Thank You</title>
+
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+    }
+
+    main {
+      flex: 1;
+      flex-direction: column;
+    }
+  </style>
+
 </head>
-<body>
-  <!--navbar-->
-  <main class="d-flex flex-grow-1">
-    <h1>Thank you! Your message has been sent.</h1>
-    <a href="/">Go back home</a>
+<body class="custom-bg">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand me-auto" href="."
+        ><img
+          class="imagine-navbar"
+          src="assets/images/Branding Zenith/Sigla_mov.png"
+      /></a>
+      <div
+        class="offcanvas offcanvas-end"
+        tabindex="-1"
+        id="offcanvasNavbar"
+        aria-labelledby="offcanvasNavbarLabel"
+      >
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+            <img
+              class="imagine-navbar"
+              src="assets/images/Branding Zenith/Sigla_mov.png"
+            />
+          </h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link mx-lg-2" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-lg-2" href="echipa.html">Echipă</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-lg-2" href="blog.html">Activitate</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-lg-2" href="rezultate.html">Rezultate</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-lg-2" href="sponsori.html">Sponsori</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-lg-2" href="galerie.html">Galerie</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
+            </li>
+            <li>
+              <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
+                <i id="theme-icon"></i>
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <button
+        class="navbar-toggler pe-0"
+        type="button"
+        data-bs-toggle="offcanvas"
+        data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </nav>
+
+  <!-- Main content -->
+  <main class="d-flex justify-content-center align-items-center">
+      <span class="custom-span">Thank you! Your message has been sent.</span>
   </main>
-  <!--footer-->
+  
+  <!-- Footer -->
+  <footer>
+    <div class="footerContainer">
+      <div class="footer-logo"></div>
+      <div class="copyright-text">
+        <p>
+          Copyright &copy;2025
+        </p>
+      </div>
+      <div class="d-flex justify-content-center align-items-center" style="width: 40%;">
+        <div class="socialIcons">
+          <a
+            href="https://www.instagram.com/zenith.cngm"
+            target="_blank"
+          >
+            <i class="bi bi-instagram me-1"></i>
+          </a>
+          <a
+            href="https://www.tiktok.com/@zenith.cngm"
+            target="_blank"
+          >
+            <i class="bi bi-tiktok me-1"></i>
+          </a>
+          <a
+            href="https://www.youtube.com/@Zenith-CNGM"
+            target="_blank"
+          >
+            <i class="bi bi-youtube me-1"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/share/14nknGnpCt/"
+            target="_blank"
+          >
+            <i class="bi bi-facebook me-1"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/clubul-de-robotic%C4%83-zenith-664100370/"
+            target="_blank"
+          >
+            <i class="bi bi-linkedin me-1"></i>
+          </a>
+          <a
+            href="https://linktr.ee/zenith.cngm"
+            target="_blank"
+          >
+          <div class="linktree-icon"></div>
+          </a>
+          <!-- Buton scos temporar
+          <a
+            href="https://hartaedu.ro/inovatie/clubul-de-robotica-zenith-are-nevoie-de-echipament-pentru-participarea-la-concursul-international-de-robotica-first-tech-challenge/ "
+            class="d-inline-block mb-3"
+            target="_blank"
+          >
+            <span class="badge bg-light text-dark fs-6 p-2">
+              <i class="bi bi-cash-stack"></i> Sustine-ne
+            </span>
+          </a>
+          -->
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  
+    <script src="./assets/js/dark_mode.js"></script>
 </body>
 </html>
