--- a/en/sponsori.html
+++ b/en/sponsori.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="assets/images/Icons/tab_icon.png" type="image/x-icon">
+    <link rel="icon" href="../assets/images/Icons/tab_icon.png" type="image/x-icon">
     
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -20,15 +20,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/bttb.css" />
-    <link rel="stylesheet" href="assets/css/sponsori.css" />
-    <link rel="stylesheet" href="assets/css/navbar.css" />
-    <link rel="stylesheet" href="assets/css/footer.css" />
-    <link rel="stylesheet" href="assets/css/scroll-bar.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/bttb.css" />
+    <link rel="stylesheet" href="../assets/css/sponsori.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
+    <link rel="stylesheet" href="../assets/css/scroll-bar.css" />
     <link
       rel="shortcut icon"
-      href="assets/images/about.png"
+      href="../assets/images/about.png"
       type="image/x-icon"
     />
     
@@ -59,7 +59,7 @@
         <a class="navbar-brand me-auto" href="."
           ><img
             class="imagine-navbar"
-            src="assets/images/Branding Zenith/Sigla_mov.png"
+            src="../assets/images/Branding Zenith/Sigla_mov.png"
         /></a>
         <div
           class="offcanvas offcanvas-end"
@@ -71,7 +71,7 @@
             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
               <img
                 class="imagine-navbar"
-                src="assets/images/Branding Zenith/Sigla_mov.png"
+                src="../assets/images/Branding Zenith/Sigla_mov.png"
               />
             </h5>
             <button
@@ -87,25 +87,25 @@
                 <a class="nav-link mx-lg-2" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="echipa.html">Echipă</a>
+                <a class="nav-link mx-lg-2" href="echipa.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="blog.html">Activitate</a>
+                <a class="nav-link mx-lg-2" href="blog.html">Activity</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="rezultate.html">Rezultate</a>
+                <a class="nav-link mx-lg-2" href="rezultate.html">Results</a>
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link mx-lg-2 active"
                   aria-current="page"
-                  href="sponsori.html">Sponsori</a>
+                  href="sponsori.html">Sponsors</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="galerie.html">Galerie</a>
+                <a class="nav-link mx-lg-2" href="galerie.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
+                <a class="nav-link mx-lg-2" href="formular.html">Contact us</a>
               </li>
               <li>
                 <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
@@ -132,13 +132,13 @@
       <!-- Sponsori platinum -->
       <div class="container py-5 platinum">
         <div class="section-title">
-          <span class="custom-span">Sponsori platinum</span>
+          <span class="custom-span">Platinum sponsors</span>
         </div>
         <div class="row justify-content-center g-4">
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/logo_mct.png"
+                src="../assets/images/Sponsori/logo_mct.png"
                 alt=""
                 class="grid-img"
               />
@@ -150,7 +150,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/logo-anchor-grup.png"
+                src="../assets/images/Sponsori/logo-anchor-grup.png"
                 alt=""
                 class="grid-img caz-special"
               />
@@ -162,7 +162,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Enpower_Energy.png"
+                src="../assets/images/Sponsori/Enpower_Energy.png"
                 alt=""
                 class="grid-img"
               />
@@ -177,13 +177,13 @@
       <!-- Sponsori gold -->
       <div class="container py-5 gold">
         <div class="section-title">
-          <span class="custom-span">Sponsori gold</span>
+          <span class="custom-span">Gold sponsors</span>
         </div>
         <div class="row justify-content-center g-4">
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Laser_RMC.png"
+                src="../assets/images/Sponsori/Laser_RMC.png"
                 alt=""
                 class="grid-img"
               />
@@ -195,7 +195,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Sharp_Solutions.svg"
+                src="../assets/images/Sponsori/Sharp_Solutions.svg"
                 alt=""
                 class="grid-img"
               />
@@ -207,7 +207,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Modular_Services.png"
+                src="../assets/images/Sponsori/Modular_Services.png"
                 alt=""
                 class="grid-img"
               />
@@ -219,7 +219,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Enayati_Medical_City.png"
+                src="../assets/images/Sponsori/Enayati_Medical_City.png"
                 alt=""
                 class="grid-img"
               />
@@ -234,13 +234,13 @@
       <!-- Sponsori silver -->
       <div class="container py-5 silver">
         <div class="section-title">
-          <span class="custom-span">Sponsori silver</span>
+          <span class="custom-span">Silver sponsors</span>
         </div>
         <div class="row justify-content-center g-4">
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Piese_Robotica__2_.png"
+                src="../assets/images/Sponsori/Piese_Robotica__2_.png"
                 alt=""
                 class="grid-img"
               />
@@ -252,7 +252,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Simav_Print.png"
+                src="../assets/images/Sponsori/Simav_Print.png"
                 alt=""
                 class="grid-img"
               />
@@ -264,7 +264,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/ICPE.png"
+                src="../assets/images/Sponsori/ICPE.png"
                 alt=""
                 class="grid-img"
               />
@@ -276,7 +276,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Indcar__2_.png"
+                src="../assets/images/Sponsori/Indcar__2_.png"
                 alt=""
                 class="grid-img"
               />
@@ -288,7 +288,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Quasar_Comex.png"
+                src="../assets/images/Sponsori/Quasar_Comex.png"
                 alt=""
                 class="grid-img"
               />
@@ -303,13 +303,13 @@
       <!-- Parteneri -->
       <div class="container py-5 partener-bg-clr">
         <div class="section-title">
-          <span class="custom-span">Partenerii noștri</span>
+          <span class="custom-span">Our partners</span>
         </div>
         <div class="row justify-content-center g-4">
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Parteneri/Sigla_CNGM.png"
+                src="../assets/images/Parteneri/Sigla_CNGM.png"
                 alt=""
                 class="grid-img"
               />
@@ -321,7 +321,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
                 <img
-                  src="assets/images/Parteneri/Sigla_Asociatia_Universitatea_Copiilor.png"
+                  src="../assets/images/Parteneri/Sigla_Asociatia_Universitatea_Copiilor.png"
                   alt=""
                   class="grid-img caz-special"
                 />
@@ -334,7 +334,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
                 <img
-                  src="assets/images/Parteneri/Logo%20Narada.png"
+                  src="../assets/images/Parteneri/Logo%20Narada.png"
                   alt=""
                   class="grid-img"
                 />
@@ -346,7 +346,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
                 <img
-                  src="assets/images/Parteneri/Sigla%20HartaEdu.png"
+                  src="../assets/images/Parteneri/Sigla%20HartaEdu.png"
                   alt=""
                   class="grid-img"
                 />
@@ -434,8 +434,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./assets/js/navbar.js"></script>
-    <script src="./assets/js/bttb.js"></script>
-    <script src="./assets/js/dark_mode.js"></script>
+    <script src="./../assets/js/navbar.js"></script>
+    <script src="./../assets/js/bttb.js"></script>
+    <script src="./../assets/js/dark_mode.js"></script>
   </body>
 </html>
