--- a/echipa.html
+++ b/echipa.html
@@ -51,6 +51,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     
     <title>ZENITH</title>
+
+    <script src = './assets/js/lang.js'></script> 
   </head>
   <body class="custom-bg" id="top">
     <!-- Navbar -->
@@ -83,6 +85,15 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class = 'nav-item'>
+                <a class = 'nav-link language-btn' onclick = 'toggle_dropdown()'>
+                  Limbă
+                </a>
+                <div class = 'language-dropdown'>
+                    <a class = 'lang-link' onclick = 'changelang("ro", "echipa.html")'>RO</a>
+                    <a class = 'lang-link' onclick = 'changelang("en", "/en/echipa.html")'>EN</a>
+                  </div>
+              </li>
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="index.html">Acasă</a>
               </li>
